Tap in the card to flip the card. Soft card
Signed-off-by: Rita de Cássia <ritadecassia.vasconcelos@hotmail.com>

--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -257,6 +257,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="316" height="461"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Rt-zX-jzg">
+                                        <rect key="frame" x="8" y="30" width="300" height="409"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <connections>
+                                            <action selector="flipButton:" destination="8Oz-aI-xQ2" eventType="touchUpInside" id="dlF-RY-6o5"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -266,9 +273,6 @@
                                 <state key="normal" backgroundImage="SwipeCardButton_Hightlighted"/>
                                 <state key="disabled" backgroundImage="SwipeCardButton_Unable"/>
                                 <state key="highlighted" backgroundImage="SwipeCardButton_Hightlighted"/>
-                                <connections>
-                                    <action selector="flipButton:" destination="8Oz-aI-xQ2" eventType="touchUpInside" id="1AK-zA-aLD"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t32-oZ-ThU">
                                 <rect key="frame" x="199" y="529" width="146" height="40"/>
@@ -303,7 +307,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LLc-Sh-QP6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="529" y="319"/>
+            <point key="canvasLocation" x="528.79999999999995" y="318.89055472263868"/>
         </scene>
         <!--Categories-->
         <scene sceneID="sCW-j3-F6F">
@@ -904,7 +908,7 @@ A process by which information is exchanged between individuals through a common
         <image name="form_n3" width="487" height="380"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="6xw-sr-xyk"/>
+        <segue reference="yWU-7L-poj"/>
         <segue reference="NUS-Ba-bpz"/>
     </inferredMetricsTieBreakers>
 </document>
