Added new assets

--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -942,6 +942,6 @@ We need this to set turns right for your and your partner!</string>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="yWU-7L-poj"/>
-        <segue reference="NUS-Ba-bpz"/>
+        <segue reference="Sxa-Qw-5AC"/>
     </inferredMetricsTieBreakers>
 </document>
