Round of third activity working fine
Signed-off-by: Rita de Cássia <ritadecassia.vasconcelos@hotmail.com>

--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -152,6 +152,14 @@ We need this to set turns right for your and your partner!</string>
                                     <action selector="startActivity:" destination="9hG-LH-gax" eventType="touchUpInside" id="EKB-TZ-4oR"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OKb-hc-yfP">
+                                <rect key="frame" x="172" y="384" width="34" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Start"/>
+                                <connections>
+                                    <action selector="startActivity2:" destination="9hG-LH-gax" eventType="touchUpInside" id="WcV-dE-kcd"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="o4y-xc-Zq0"/>
@@ -160,6 +168,8 @@ We need this to set turns right for your and your partner!</string>
                         <outlet property="clockLabel" destination="Y0i-l1-UM5" id="ZpT-v4-fX4"/>
                         <outlet property="fraseRandomizada" destination="u3b-c0-rFS" id="TN9-uP-86O"/>
                         <outlet property="namePerson" destination="7xt-9u-gf8" id="NQ1-MF-s0O"/>
+                        <outlet property="start1outlet" destination="IsS-BZ-wWy" id="Hl1-xk-9MN"/>
+                        <outlet property="start2outlet" destination="OKb-hc-yfP" id="X2z-mA-ghC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fQW-uV-tk0" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -542,48 +552,9 @@ A process by which information is exchanged between individuals through a common
                                     <fragment content="Love is as much good as being loved, we hope that you two can feel it now!">
                                         <attributes>
                                             <color key="NSColor" red="0.24018999999999999" green="0.24026" blue="0.24529000000000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                            <font key="NSFont" size="24" name="SFProDisplay-Semibold"/>
+                                            <font key="NSFont" metaFont="system" size="24"/>
                                             <real key="NSKern" value="0.69999999999999996"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO">
-                                                <tabStops>
-                                                    <textTab alignment="left" location="28">
-                                                        <options/>
-                                                    </textTab>
-                                                    <textTab alignment="left" location="56">
-                                                        <options/>
-                                                    </textTab>
-                                                    <textTab alignment="left" location="84">
-                                                        <options/>
-                                                    </textTab>
-                                                    <textTab alignment="left" location="112">
-                                                        <options/>
-                                                    </textTab>
-                                                    <textTab alignment="left" location="140">
-                                                        <options/>
-                                                    </textTab>
-                                                    <textTab alignment="left" location="168">
-                                                        <options/>
-                                                    </textTab>
-                                                    <textTab alignment="left" location="196">
-                                                        <options/>
-                                                    </textTab>
-                                                    <textTab alignment="left" location="224">
-                                                        <options/>
-                                                    </textTab>
-                                                    <textTab alignment="left" location="252">
-                                                        <options/>
-                                                    </textTab>
-                                                    <textTab alignment="left" location="280">
-                                                        <options/>
-                                                    </textTab>
-                                                    <textTab alignment="left" location="308">
-                                                        <options/>
-                                                    </textTab>
-                                                    <textTab alignment="left" location="336">
-                                                        <options/>
-                                                    </textTab>
-                                                </tabStops>
-                                            </paragraphStyle>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO"/>
                                         </attributes>
                                     </fragment>
                                 </attributedString>
@@ -638,7 +609,7 @@ A process by which information is exchanged between individuals through a common
                                     <fragment content="Como você e seu parceiro preferem ser chamados?">
                                         <attributes>
                                             <color key="NSColor" red="0.2627450980392157" green="0.2627450980392157" blue="0.26666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" size="32" name="SFProDisplay-Bold"/>
+                                            <font key="NSFont" metaFont="system" size="32"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
@@ -956,7 +927,7 @@ We need this to set turns right for your and your partner!</string>
         <image name="Activity_DinFras" width="155" height="164"/>
         <image name="Activity_DircCron" width="161" height="170"/>
         <image name="BackButton" width="13" height="22"/>
-        <image name="BackOfCard_Din2" width="335" height="475"/>
+        <image name="BackOfCard_Din2" width="342" height="487"/>
         <image name="Balao1_ShakeScreen" width="198" height="204"/>
         <image name="Balao1_v1_LS" width="1011" height="918"/>
         <image name="Balao2_ShakeScreen" width="198" height="204"/>
@@ -988,7 +959,6 @@ We need this to set turns right for your and your partner!</string>
         <image name="coracaoFin2" width="196" height="182"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Xs5-sL-WMg"/>
         <segue reference="yWU-7L-poj"/>
         <segue reference="G2F-qe-EWU"/>
     </inferredMetricsTieBreakers>
