--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -966,6 +966,35 @@ We need this to set turns right for your and your partner!</string>
             </objects>
             <point key="canvasLocation" x="-3148" y="724.58770614692662"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="GJf-iJ-OdQ">
+            <objects>
+                <viewController id="pWk-We-tug" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nqJ-Rh-rnP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="FunnySpeech-INTRO-Screen" translatesAutoresizingMaskIntoConstraints="NO" id="mbj-w2-tDN">
+                                <rect key="frame" x="25" y="55" width="325" height="443"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2j-S2-F5w">
+                                <rect key="frame" x="126" y="554" width="123" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" backgroundImage="StartNovo"/>
+                                <connections>
+                                    <segue destination="bG2-3S-PJu" kind="show" id="YmB-zR-9b6"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="F76-aL-hSY"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HVV-Xf-08g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2298" y="319"/>
+        </scene>
         <!--Turn View Controller-->
         <scene sceneID="bVj-Cc-PRF">
             <objects>
@@ -1401,7 +1430,7 @@ We need this to set turns right for your and your partner!</string>
     </scenes>
     <resources>
         <image name="BackButton" width="13" height="22"/>
-        <image name="BackOfCard_Din2" width="342" height="487"/>
+        <image name="BackOfCard_Din2" width="335" height="475"/>
         <image name="Background" width="375" height="667"/>
         <image name="BackgroundBlue" width="375" height="667"/>
         <image name="Balao1_ShakeScreen" width="198" height="204"/>
@@ -1417,6 +1446,7 @@ We need this to set turns right for your and your partner!</string>
         <image name="Form1_ShakeScreen" width="470" height="465"/>
         <image name="FormClara" width="469" height="465"/>
         <image name="FormEscura" width="388" height="482"/>
+        <image name="FunnySpeech-INTRO-Screen" width="325" height="443"/>
         <image name="GotIt" width="123" height="38"/>
         <image name="IlustrationSoundOfSilence" width="375" height="243"/>
         <image name="IlustrationTimedDiscussion" width="342" height="246"/>
@@ -1441,7 +1471,7 @@ We need this to set turns right for your and your partner!</string>
         </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="yWU-7L-poj"/>
+        <segue reference="YmB-zR-9b6"/>
         <segue reference="Sxa-Qw-5AC"/>
     </inferredMetricsTieBreakers>
 </document>
