--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -993,17 +993,16 @@
         <!--View Controller-->
         <scene sceneID="GJf-iJ-OdQ">
             <objects>
-                <viewController id="pWk-We-tug" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="fuunySpeach" id="pWk-We-tug" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nqJ-Rh-rnP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="FunnySpeech-INTRO-Screen" translatesAutoresizingMaskIntoConstraints="NO" id="mbj-w2-tDN">
-                                <rect key="frame" x="25" y="55" width="325" height="443"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="FunnySpeech-INTRO-Screen" translatesAutoresizingMaskIntoConstraints="NO" id="mbj-w2-tDN">
+                                <rect key="frame" x="25" y="112" width="325" height="443.00000000000011"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2j-S2-F5w">
-                                <rect key="frame" x="126" y="554" width="123" height="38"/>
+                                <rect key="frame" x="126" y="592" width="123" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" backgroundImage="StartNovo"/>
                                 <connections>
@@ -1012,6 +1011,10 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="mbj-w2-tDN" firstAttribute="centerY" secondItem="nqJ-Rh-rnP" secondAttribute="centerY" id="bre-tK-T8D"/>
+                            <constraint firstItem="mbj-w2-tDN" firstAttribute="centerX" secondItem="nqJ-Rh-rnP" secondAttribute="centerX" id="pJc-RM-3Ek"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="F76-aL-hSY"/>
                     </view>
                 </viewController>
@@ -1213,22 +1216,8 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Form1_ShakeScreen" translatesAutoresizingMaskIntoConstraints="NO" id="Bqg-wC-Rhg">
-                                <rect key="frame" x="-220" y="-361" width="450" height="478"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="450" id="G3X-se-Aym"/>
-                                    <constraint firstAttribute="height" constant="478" id="hL2-kn-7xq"/>
-                                </constraints>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Form1_ShakeScreen" translatesAutoresizingMaskIntoConstraints="NO" id="dyW-cp-DNH">
-                                <rect key="frame" x="98" y="505" width="450" height="478"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="450" id="wQs-Z1-w7h"/>
-                                    <constraint firstAttribute="height" constant="478" id="wrs-31-XkY"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dU-ND-Bwy">
-                                <rect key="frame" x="32" y="464" width="311" height="75"/>
+                                <rect key="frame" x="32" y="464" width="311" height="126"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Shake your phone to receive  theme">
@@ -1453,7 +1442,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="BackOfCard_Din2" width="335" height="475"/>
+        <image name="BackButton" width="13" height="22"/>
+        <image name="BackOfCard_Din2" width="342" height="487"/>
         <image name="Background" width="375" height="667"/>
         <image name="BackgroundBlue" width="375" height="667"/>
         <image name="Balao1_ShakeScreen" width="198" height="204"/>
@@ -1466,7 +1456,6 @@
         <image name="FinishButton2" width="162" height="56"/>
         <image name="FinishSpeechButton_Hightlighted" width="146" height="40"/>
         <image name="FinishSpeechButton_Unable" width="146" height="40"/>
-        <image name="Form1_ShakeScreen" width="470" height="465"/>
         <image name="FormClara" width="469" height="465"/>
         <image name="FormEscura" width="388" height="482"/>
         <image name="FunnySpeech-INTRO-Screen" width="325" height="443"/>
